Index css change

--- a/src/index.scss
+++ b/src/index.scss
@@ -82,13 +82,15 @@ $rounded-pill: 50rem  !default;
     box-sizing: content-box;
     position: relative;
     top: -.05em;
-    height: 1.75rem;
-    padding: var(--pgn-spacing-spacer-base, $spacer) 0;
+    height: auto;
+    padding: 0.5rem 0;
+    //padding: var(--pgn-spacing-spacer-base, $spacer) 0;
     margin-right: var(--pgn-spacing-spacer-base, $spacer);
 
     img {
-      display: block;
-      height: 100%;
+      //display: block;
+      height: 85px;
+      width: auto;
     }
   }
   .secondary-menu-container {
