--- a/src/index.scss
+++ b/src/index.scss
@@ -82,7 +82,7 @@ $rounded-pill: 50rem  !default;
     box-sizing: content-box;
     position: relative;
     top: -.05em;
-    height: auto;
+    height: 60px;
     padding: 0.5rem 0;
     //padding: var(--pgn-spacing-spacer-base, $spacer) 0;
     margin-right: var(--pgn-spacing-spacer-base, $spacer);
